# cx-attach

./: .gitignore  README.md  pyproject.toml
examples/: demo_sim.yaml  demo_sim2.yaml  demo_sim2_crds.yaml  demo_topology.yaml
src/cx_attach/: __init__.py  __main__.py  app.py  auto.py  cli.py  config.py  kubectl.py  options.py  specs.py  topology.py
src/cx_attach/cli/: __init__.py  main.py  options.py
src/cx_attach/commands/: __init__.py  apply.py  remove.py  utils.py
src/edge_attach/: __init__.py  __main__.py  cli.py
tests/: test_auto_plan.py
