[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cx-attach"
version = "0.1.0"
description = "Typer CLI for wiring simulation containers to fabric edge interfaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer==0.19.2",
    "PyYAML>=6.0",
]
authors = [{ name = "Florian Schwarz" }]

[project.scripts]
cx-attach = "cx_attach.cli.main:app"
cx_attach = "cx_attach.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cx_attach"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "examples",
    "src/cx_attach",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "N",      # pep8-naming
    "C90",    # mccabe complexity
    "RUF",    # Ruff-specific rules
    "ARG",    # flake8-unused-arguments
    "PIE",    # flake8-pie
    "PL",     # Pylint
]
ignore = [
    "E501",     # Line too long (handled by formatter)
    "W291",     # Trailing whitespace (handled by formatter)
    "W293",     # Blank line contains whitespace (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["B008"]  # Allow function calls in argument defaults for tests

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 13
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
exclude = ["examples/"]

[[tool.mypy.overrides]]
module = ["typer.*", "yaml"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["examples/**/*"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  examples
)/
'''

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.4",
]
